[ADDED] ui list store
Former-commit-id: 3702c31e9c8eeec4b01e97ab59709a638a9b52de

--- a/easyui/platform/msvc2008/projects/easyui.vcproj
+++ b/easyui/platform/msvc2008/projects/easyui.vcproj
@@ -244,7 +244,7 @@
 				Name="stage"
 				>
 				<File
-					RelativePath="..\..\..\src\easyui\view\IStagePage.h"
+					RelativePath="..\..\..\src\easyui\view\IUIStagePage.h"
 					>
 				</File>
 				<File
