[ADDED] 打包输出ui需要的部分
Former-commit-id: 382415b2571de6bdd26807b29a7a59b294b66858

--- a/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
+++ b/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
@@ -668,6 +668,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="ui"
+				>
+				<File
+					RelativePath="..\..\..\src\librespacker\PackUITask.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\librespacker\PackUITask.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="unpack"
