[CHANGED] select sprite改用消息实现
Former-commit-id: a2b4a45cee7e6a64365b5cb5f546cbb58d9b42c2

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2909,11 +2909,27 @@
 				Name="subjects"
 				>
 				<File
+					RelativePath="..\..\..\src\drag2d\message\MultiSpriteSelectedSJ.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\message\MultiSpriteSelectedSJ.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\message\SpriteNameChangeSJ.cpp"
 					>
 				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\message\SpriteNameChangeSJ.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\message\SpriteSelectedSJ.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\message\SpriteSelectedSJ.h"
 					>
 				</File>
 				<File
