--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2329,6 +2329,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\view\ViewlistListImpl.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\view\ViewlistPanel.cpp"
 					>
 				</File>
