[ADDED] 用pull获得sprite layer
Former-commit-id: 4cccbc1999d4857f6c017115abd2d6df7c63a36a

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -3016,6 +3016,18 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="query"
+					>
+					<File
+						RelativePath="..\..\..\src\drag2d\message\QuerySelectedSpriteLayerSJ.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\message\QuerySelectedSpriteLayerSJ.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 		</Filter>
 		<File
